--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render :partial => "shared/form_messages", :locals => {:object => @group, :f => f} %>
+
 <%= f.label_and_field :description %>
 
 <div class="control-group">
