--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -3,8 +3,8 @@
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3>Create Repository</h3>
    </div>
-   <div class="modal-body">     
-      <%= render "shared/form_messages", :object => @repository %>
+   <div class="modal-body">
+      <%= render :partial => "shared/form_messages", :locals => {:object => @repository, :f => f} %>
       <fieldset>
         <%= f.label_with_field :repo_code, f.text_field(:repo_code, :size => 10) %>
         <%= f.label_with_field :description, f.text_area(:description, :rows => 3) %>
