--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Accessions", :controller => :accessions, :action => :index), link_to(@accession.title, :controller => :accessions, :action => :show, :id => @accession.id), "Edit"]} %>
 
-<%= form_for @accession, :as => "accession", :url => {:action => :update, :id => @accession.id}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
+<%= jsonmodel_form_for @accession, :as => "accession", :url => {:action => :update, :id => @accession.id}, :html => {:class => 'form-horizontal', :id => "accession_form"} do |f| %>
   <div class="row-fluid">
     <div class="span3">
       <%= render :partial => "sidebar" %>
