--- a/frontend/app/views/archival_objects/_new_inline.html.erb
+++ b/frontend/app/views/archival_objects/_new_inline.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @archival_object, :as => "archival_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= jsonmodel_form_for @archival_object, :as => "archival_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
 <div class="row-fluid">
   <div class="span3">
     <%= render :partial => "sidebar" %>
