--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -10,7 +10,7 @@
     </div> <!-- well -->
    </div> <!-- span3 -->
    <div class="span9 record-pane" id="archival_object_container">
-      <%= form_for @archival_object, :as => "archival_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= jsonmodel_form_for @archival_object, :as => "archival_object", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
          <%= render :partial => "archival_objects/form_container", :locals => {:f => f} %>
          <div class="form-actions">            
             <button type="submit" class="btn btn-primary">Save Archival Object</button>
