--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= jsonmodel_form_for @repository, :as => "repository", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
    <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3>Create Repository</h3>
