--- a/frontend/app/views/resources/_edit_inline.html.erb
+++ b/frontend/app/views/resources/_edit_inline.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @resource, :as => "resource", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+<%= jsonmodel_form_for @resource, :as => "resource", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
   <div class="row-fluid">
     <div class="span3">
       <%= render :partial => "resources/sidebar" %>
