--- a/frontend/app/views/subjects/edit.html.erb
+++ b/frontend/app/views/subjects/edit.html.erb
@@ -4,7 +4,7 @@
    <div class="span9">
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
       <br/>
-      <%= form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= jsonmodel_form_for @subject, :as => "subject", :url => {:action => :update}, :html => {:class => 'form-horizontal'} do |f| %>
          <%= render :partial => "subjects/form", :locals => {:f => f} %>
          <div class="form-actions">            
             <button type="submit" class="btn btn-primary">Save Subject</button>   
