--- a/frontend/app/views/users/new.html.erb
+++ b/frontend/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row-fluid">
    <div class="span12">
       <h2>New Account</h2>
-      <%= form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
+      <%= jsonmodel_form_for @user, :as => "createuser", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
          <%= render :partial => "shared/form_messages", :locals => {:object => @user, :f => f} %>
          <fieldset>
            <%= f.label_and_field :username %>
