--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -23,8 +23,8 @@
       <p class="alert alert-info">Click 'Add Extent' to add an extent record.</p>
     <% else %>
       <% @accession.extents.each_with_index do | extent, index | %>
-        <% f.with_jsonmodel("extents[]", extent, :extent) do %>
-          <%= render :partial => "extent/form", :locals => {:f => f} %>
+        <%= f.with_jsonmodel("extents[]", extent, :extent) do %>
+          <% render :partial => "extent/form", :locals => {:f => f} %>
         <% end %>
       <% end %>
     <% end %>
@@ -42,8 +42,8 @@
       <p class="alert alert-info">Click 'Add Date' to add a date record.</p>
     <% else %>
       <% @accession.dates.each_with_index do | date, index | %>
-        <% f.with_jsonmodel("dates[]", date, :date) do %>
-          <%= render :partial => "dates/form", :locals => {:f => f, :index => index} %>
+        <%= f.with_jsonmodel("dates[]", date, :date) do %>
+          <% render :partial => "dates/form", :locals => {:f => f, :index => index} %>
         <% end %>
       <% end %>
     <% end %>
@@ -61,8 +61,8 @@
       <p class="alert alert-info">Click 'Add External Document' to add an external document record.</p>
     <% else %>
       <% @accession.external_documents.each_with_index do | external_document, index | %>
-        <% f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
-          <%= render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
+        <%= f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
+          <% render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
         <% end %>
       <% end %>
     <% end %>
