--- a/frontend/app/views/extent/_template.html.erb
+++ b/frontend/app/views/extent/_template.html.erb
@@ -1,5 +1,5 @@
 <div id="extent_form_template"><!--
-  <% f.with_jsonmodel("extents[]", {}, :extent, :index => "${index}") do %>
-    <%= render :partial => "extent/form", :locals => {:f => f} %>
+  <%= f.with_jsonmodel("extents[]", {}, :extent, :index => "${index}") do %>
+    <% render :partial => "extent/form", :locals => {:f => f} %>
   <% end %>
 --></div>
