--- a/frontend/app/views/resources/_form_container.html.erb
+++ b/frontend/app/views/resources/_form_container.html.erb
@@ -20,8 +20,8 @@
         <p class="alert alert-info">Click 'Add Extent' to add an extent record.</p>
       <% else %>
         <% @resource.extents.each_with_index do | extent, index | %>
-          <% f.with_jsonmodel("extents[]", extent, :extent) do %>
-            <%= render :partial => "extent/form", :locals => {:f => f} %>
+          <%= f.with_jsonmodel("extents[]", extent, :extent) do %>
+            <% render :partial => "extent/form", :locals => {:f => f} %>
           <% end %>
         <% end %>
       <% end %>
@@ -38,8 +38,8 @@
         <p class="alert alert-info">Click 'Add Date' to add a date record.</p>
       <% else %>
         <% @resource.dates.each_with_index do | date, index | %>
-          <% f.with_jsonmodel("dates[]", date, :date) do %>
-            <%= render :partial => "dates/form", :locals => {:f => f, :index => index} %>
+          <%= f.with_jsonmodel("dates[]", date, :date) do %>
+            <% render :partial => "dates/form", :locals => {:f => f, :index => index} %>
           <% end %>
         <% end %>
       <% end %>
@@ -56,8 +56,8 @@
         <p class="alert alert-info">Click 'Add External Document' to add an external document record.</p>
       <% else %>
         <% @resource.external_documents.each_with_index do | external_document, index | %>
-          <% f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
-            <%= render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
+          <%= f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
+            <% render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
           <% end %>
         <% end %>
       <% end %>
