Add frontend form/display for rights statements on Accession, Resource and Archival Object

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -5,6 +5,7 @@
 //= require dates.crud
 //= require extent.crud
 //= require external_documents.crud
+//= require rights_statements.crud
 
 $(function() {
 
