--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -14,6 +14,10 @@
       <li><a href="#external_documents">External Documents <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @archival_object.rights_statements.length > 0 %>
+      <li><a href="#rights_statements">Rights Statements <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary">Save Archival Object</button>
