Refactor subrecord forms to use a generic partial and javascript

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -3,9 +3,7 @@
 //= require jstree
 //= require subjects.crud
 //= require dates.crud
-//= require extent.crud
-//= require external_documents.crud
-//= require rights_statements.crud
+//= require subrecord.crud
 
 $(function() {
 
