--- a/frontend/app/assets/stylesheets/archivesspace/form.less
+++ b/frontend/app/assets/stylesheets/archivesspace/form.less
@@ -214,11 +214,7 @@
 
 
 /* AGENT NAME Form styles */
-.subform {
-  border: 1px solid #DDD;
-  .border-radius(4px);
-  margin-bottom: 10px;
-
+.subrecord-form-container {
   h4 {
     background-color: #FAFAFA;
     line-height: 1.4em;
@@ -228,12 +224,14 @@
     .border-radius(4px 4px 0 0);
   }
 
-  .subform-removal-confirmation,
-  .subform-remove {
+  .subrecord-form-removal-confirmation,
+  .subrecord-form-remove {
     margin: 6px 6px 0 0;
   }
 
-  .subform-container {
-    margin-top: 10px;
+  .subrecord-form-fields {
+    border: 1px solid #DDD;
+    .border-radius(4px);
+    margin-bottom: 10px;
   }
 }
