--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -1,5 +1,5 @@
 <div class="subform agent-contact-fields">
-  <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>  
+  <a href="javascript:void(0)" class="btn btn-mini pull-right subrecord-form-remove"><span class='icon-remove'></span></a>
   <div class="subform-container">
     <%= f.label_and_field :name %>
     <%= f.label_and_field :salutation %>
