--- a/frontend/app/views/dates/_form.html.erb
+++ b/frontend/app/views/dates/_form.html.erb
@@ -1,5 +1,4 @@
-<div class="subform date-fields">
-  <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
+<div class="subrecord-form-fields" data-allow-removal="true">
   <div class="date-container">
     <%= f.label_and_field :label %>
     <div class="control-group <%= f.error_classes(:date_type) %>">
