--- a/frontend/app/views/extents/_show.html.erb
+++ b/frontend/app/views/extents/_show.html.erb
@@ -1,5 +1,5 @@
-<section id="extent">
-  <h3>Extent</h3>
+<section id="extents">
+  <h3>Extents</h3>
   <div class="accordion details" id="extent_accordion">
     <% extents.each_with_index do | extent, index | %>
       <div class="accordion-group">
