--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -36,7 +36,7 @@
        <% end %>
     </section>
 
-    <%= render :partial => "extent/show", :locals => { :extents => @resource.extents } %>
+    <%= render :partial => "extents/show", :locals => { :extents => @resource.extents } %>
 
     <% if @resource.dates.length > 0 %>
       <%= render :partial => "dates/show", :locals => { :dates => @resource.dates } %>
