--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -13,86 +13,10 @@
 </section>
 
 
-<section id="extent">
-  <h3>
-    Extent
-    <input type="button" class="btn btn-small pull-right" value="Add Extent"/>
-  </h3>
-  <div id="extents_container">
-    <% if @accession.extents.blank? %>
-      <p class="alert alert-info">Click 'Add Extent' to add an extent record.</p>
-    <% else %>
-      <% @accession.extents.each_with_index do | extent, index | %>
-        <%= f.with_jsonmodel("extents[]", extent, :extent) do %>
-          <% render :partial => "extent/form", :locals => {:f => f} %>
-        <% end %>
-      <% end %>
-    <% end %>
-  </div>
-</section>
-
-
-<section id="dates">
-  <h3>
-    Dates
-    <input type="button" class="btn btn-small pull-right" value="Add Date"/>
-  </h3>
-  <div id="dates_container">
-    <% if @accession.dates.blank? %>
-      <p class="alert alert-info">Click 'Add Date' to add a date record.</p>
-    <% else %>
-      <% @accession.dates.each_with_index do | date, index | %>
-        <%= f.with_jsonmodel("dates[]", date, :date) do %>
-          <% render :partial => "dates/form", :locals => {:f => f, :index => index} %>
-        <% end %>
-      <% end %>
-    <% end %>
-  </div>
-</section>
-
-
-<section id="external_documents">
-  <h3>
-    External Documents
-    <input type="button" class="btn btn-small pull-right" value="Add External Document"/>
-  </h3>
-  <div id="external_documents_container">
-    <% if @accession.external_documents.blank? %>
-      <p class="alert alert-info">Click 'Add External Document' to add an external document record.</p>
-    <% else %>
-      <% @accession.external_documents.each_with_index do | external_document, index | %>
-        <%= f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
-          <% render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
-        <% end %>
-      <% end %>
-    <% end %>
-  </div>
-</section>
-
-
-<section id="rights_statements">
-  <h3>
-    Rights Statements
-    <input type="button" class="btn btn-small pull-right" value="Add Rights Statement"/>
-  </h3>
-  <div id="rights_statements_container">
-    <% if @accession.rights_statements.blank? %>
-      <p class="alert alert-info">Click 'Add Rights Statement' to add an rights statement record.</p>
-    <% else %>
-      <% @accession.rights_statements.each_with_index do | rights_statement, index | %>
-        <% f.with_jsonmodel("rights_statements[]", rights_statement, :rights_statement) do %>
-          <%= render :partial => "rights_statements/form", :locals => {:f => f, :index => index} %>
-        <% end %>
-      <% end %>
-    <% end %>
-  </div>
-</section>
-
-
-<%= render :partial => "extent/template", :locals => {:f => f} %>
-<%= render :partial => "dates/template", :locals => {:f => f} %>
-<%= render :partial => "external_documents/template", :locals => {:f => f} %>
-<%= render :partial => "rights_statements/template", :locals => {:f => f} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :extents} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :dates} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :external_documents} %>
+<%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @accession, :method => :rights_statements} %>
 
 
 <div class="form-actions">            
