--- a/frontend/app/views/agents/name_forms/_secondary_name_form.html.erb
+++ b/frontend/app/views/agents/name_forms/_secondary_name_form.html.erb
@@ -1,5 +1,5 @@
 <div class="subform">
-  <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
+  <a href="javascript:void(0)" class="btn btn-mini pull-right subrecord-form-remove"><span class='icon-remove'></span></a>
   <div class="subform-container">
     <%= render :partial => "agents/name_forms/#{@agent.agent_type}", :locals=>{:f=>f} %>
   </div>
