--- a/frontend/app/views/external_documents/_form.html.erb
+++ b/frontend/app/views/external_documents/_form.html.erb
@@ -1,7 +1,4 @@
-<div class="subform external-document-fields">
-  <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
-  <div class="external-document-container">
-    <%= f.label_and_textarea :title %>
-    <%= f.label_and_field :location %>
-  </div>
+<div class="subrecord-form-fields" data-allow-removal="true">
+  <%= f.label_and_textarea :title %>
+  <%= f.label_and_field :location %>
 </div>
