--- a/frontend/app/views/resources/_sidebar.html.erb
+++ b/frontend/app/views/resources/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list affix as-nav-list" data-spy="affix">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#extent">Extent <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#extents">Extents <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @resource.dates.length > 0 %>
       <li><a href="#dates">Dates <span class="icon-chevron-right"></span></a></li>
