--- a/frontend/app/views/subjects/_form.html.erb
+++ b/frontend/app/views/subjects/_form.html.erb
@@ -19,23 +19,9 @@
      
    </section>
 
-   <section id="external_documents">
-     <h3>
-       External Documents
-       <input type="button" class="btn btn-small pull-right" value="Add External Document"/>
-     </h3>
-     <div id="external_documents_container">
-       <% if @subject.external_documents.blank? %>
-         <p class="alert alert-info">Click 'Add External Document' to add an external document record.</p>
-       <% else %>
-         <% @subject.external_documents.each_with_index do | external_document, index | %>
-           <%= f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
-             <% render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
-           <% end %>
-         <% end %>
-       <% end %>
-     </div>
-   </section>
+
+  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @subject, :method => :external_documents} %>
+
 
 </fieldset>
 
