--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -1,6 +1,7 @@
 <%
   singular = method.to_s.singularize
   section_id = method.to_s if section_id.blank?
+  suppress_template = false if suppress_template.blank?
 %>
 
 <section id="<%= section_id %>" class="subrecord-form" data-object-name="<%= singular %>" data-template-id="<%= singular %>_form_template">
@@ -20,7 +21,7 @@
 
       <% object[method].each_with_index do | obj, index | %>
         <%= f.with_jsonmodel("#{method.to_s}[]", obj, singular.intern) do %>
-          <% render :partial => "#{method.to_s}/form", :locals => {:f => f, :index => index} %>
+          <% render :partial => "#{method.to_s}/form", :locals => {:f => f, :index => index, :object => obj} %>
         <% end %>
       <% end %>
 
@@ -29,4 +30,6 @@
 
 </section>
 
-<%= render :partial => "#{method.to_s}/template", :locals => {:f => f} %>
+<% if not suppress_template %>
+  <%= render :partial => "#{method.to_s}/template", :locals => {:f => f} %>
+<% end %>
