WIP: trying to get subrecords to work... warning.. broken

--- a/frontend/app/views/agents/_form.html.erb
+++ b/frontend/app/views/agents/_form.html.erb
@@ -58,7 +58,7 @@
     </div>
   </section>
 
-  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => @agent, :method => :external_documents} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :method => :external_documents} %>
 
 </fieldset>
 
