--- a/frontend/app/views/shared/_subrecord_form.html.erb
+++ b/frontend/app/views/shared/_subrecord_form.html.erb
@@ -2,34 +2,51 @@
   singular = method.to_s.singularize
   section_id = method.to_s if section_id.blank?
   suppress_template = false if suppress_template.blank?
+  force_custom_template = false if force_custom_template.blank?
+
+  if force_custom_template
+    template_id = force_custom_template
+  else
+    template_id = "#{singular}_form_template"
+  end
 %>
+<div>
+  <% puts object.inspect %>
+  <section id="<%= section_id %>" class="subrecord-form" data-object-name="<%= singular %>" data-template-id="<%= template_id %>">
 
-<section id="<%= section_id %>" class="subrecord-form" data-object-name="<%= singular %>" data-template-id="<%= singular %>_form_template">
+    <h3>
+      <%= I18n.t("#{singular}._html.plural") %>
+      <input type="button" class="btn btn-small pull-right" value="Add <%= I18n.t("#{singular}._html.singular") %>"/>
+    </h3>
 
-  <h3>
-    <%= I18n.t("#{singular}._html.plural") %>
-    <input type="button" class="btn btn-small pull-right" value="Add <%= I18n.t("#{singular}._html.singular") %>"/>
-  </h3>
+    <div class="subrecord-form-container">
+      <% if object[method.to_s].blank? %>
 
-  <div class="subrecord-form-container">
+        <p class="alert alert-info">Click 'Add <%= I18n.t("#{singular}._html.singular") %>' to add a <%= I18n.t("#{singular}._html.singular") %> record.</p>
 
-    <% if object[method].blank? %>
+      <% else %>
 
-      <p class="alert alert-info">Click 'Add <%= I18n.t("#{singular}._html.singular") %>' to add a <%= I18n.t("#{singular}._html.singular") %> record.</p>
-
-    <% else %>
-
-      <% object[method].each_with_index do | obj, index | %>
-        <%= f.with_jsonmodel("#{method.to_s}[]", obj, singular.intern) do %>
-          <% render :partial => "#{method.to_s}/form", :locals => {:f => f, :index => index, :object => obj} %>
+        <% object[method.to_s].each_with_index do | obj, index | %>
+          <%= f.with_jsonmodel("#{method.to_s}[]", obj, singular.intern) do %>
+            <% render :partial => "#{method.to_s}/form", :locals => {:f => f, :index => index} %>
+          <% end %>
         <% end %>
+
       <% end %>
+    </div>
 
+  </section>
+
+  <% if not suppress_template %>
+    <% if force_custom_template %>
+      <div id="<%= force_custom_template %>" style="display:none;">
+        <%= f.with_jsonmodel("external_documents[]", {}, :external_document, :index => "${index}") do %>
+          <% render :partial => "external_documents/form", :locals => {:f => f, :index => 1} %>
+        <% end %>
+      </div>
+    <% else %>
+      <%= render :partial => "#{method.to_s}/template", :locals => {:f => f} %>
     <% end %>
-  </div>
+  <% end %>
 
-</section>
-
-<% if not suppress_template %>
-  <%= render :partial => "#{method.to_s}/template", :locals => {:f => f} %>
-<% end %>
+</div>
