--- a/frontend/app/views/rights_statements/_form.html.erb
+++ b/frontend/app/views/rights_statements/_form.html.erb
@@ -14,5 +14,5 @@
   <%= f.label_and_field :restriction_end_date %>
   <%= f.label_and_field :granted_note %>
 
-  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => f.current, :method => :external_documents, :section_id => "rights_statement_external_documents", :force_custom_template => "rights_statement_external_documents_form_template"} %>
+  <%= render :partial => "shared/subrecord_form", :locals => {:f => f, :object => f.current, :method => :external_documents, :section_id => "rights_statement_external_documents", :nested_template => "rights_statement_external_documents_form_template", :nested_multiple => true} %>
 </div>
